fix overflow in <pre> element

--- a/assets/main.css
+++ b/assets/main.css
@@ -282,6 +282,7 @@ code {
 
 pre {
   white-space: pre-wrap;
+  word-break: break-all;
 }
 
 kbd {
